--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,44 @@
     <!-- built files will be auto injected -->
 
 
+
+  <script>
+    new Vue({
+      el: 'chart',
+      data: {
+        chartOptions: {
+          title: {
+            text: "CanvasJS Chart in Vue.js"
+          },
+          data: [
+            {
+              type: "column",
+              dataPoints: [
+                { x: 10, y: 71 },
+                { x: 20, y: 55 },
+                { x: 30, y: 50 },
+                { x: 40, y: 65 },
+                { x: 50, y: 95 },
+                { x: 60, y: 68 },
+                { x: 70, y: 28 },
+                { x: 80, y: 34 },
+                { x: 90, y: 14 }
+              ]
+            }
+          ]
+        },
+        chart : null
+      },
+      mounted: function () {
+        this.chart = new CanvasJS.Chart("chartContainer", this.chartOptions);
+        this.chart.render();
+      }
+    })
+  </script>
+
+
+
+
   </body>
 
 
